# altitude_simuator_vision

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  PORTING_NOTES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  altitude_estimation_v2.py  test_drone_captures.py
DroneCaptures/: metadata.json
DroneCaptures/New folder (2)/: metadata.json
DroneCaptures/dataset2/: metadata.json
DroneCaptures/dataset3/: convert_filename.py  metadata.json
DroneCaptures/dataset4/: generate_metadata_json.py  metadata.json
DroneCaptures/dataset5/: generate_metadata_json.py  metadata.json
DroneCaptures/dataset6/: generate_metadata_json.py  metadata.json
examples/: example_simple.cpp
include/altitude_estimator/: altitude_estimation_system.hpp  calibration.hpp  common.hpp  config.hpp  coordinate_frames.hpp  data_types.hpp  ground_plane_fitter.hpp  ground_segmenter.hpp  homography_altimeter.hpp  image_undistorter.hpp  initializer.hpp  pose_engine.hpp  realtime_altimeter.hpp  rotation_provider.hpp  smoother.hpp  visual_tracker.hpp
scripts/: create_video.py
src/: altitude_estimation_system.cpp  calibration.cpp  coordinate_frames.cpp  ground_plane_fitter.cpp  ground_segmenter.cpp  homography_altimeter.cpp  image_undistorter.cpp  initializer.cpp  pose_engine.cpp  realtime_altimeter.cpp  rotation_provider.cpp  smoother.cpp  visual_tracker.cpp
tests/: imu_noise_simulator.cpp  test_drone_captures.cpp  test_drone_captures_fix.txt  test_video.cpp
